# cpp

./: CMakeLists.txt  MMformat.ps  README.md  assignment0.md  assignment1.md  chebyshev.hpp  gauss_legendre.hpp  gauss_lobotto.hpp  integration_rule.hpp  mat_mat  mat_mat.cpp  mat_vec  mat_vec.cpp  mmf_product  mmf_product.cpp  polynomial_function.hpp  polynomial_integrate.cpp  result.mm  scalarfunction.hpp  unittest.cpp
